chore: added overlap hidden on .card to fix border radius issue on image

--- a/src/components/component-card/ComponentCard.css
+++ b/src/components/component-card/ComponentCard.css
@@ -1,6 +1,7 @@
 .card {
   border: 1px solid var(--goa-color-greyscale-200);
   border-radius: 4px;
+  overlap: hidden;
 }
 
 .card-image {
@@ -11,7 +12,6 @@
   background-position: center;
   border-bottom: 1px solid var(--goa-color-greyscale-200);
   background-color: #F8F8F8;
-  border-radius: 3px 3px 0px 0px;
 }
 
 .card-content {
